--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -1,12 +1,13 @@
 .mainLayout {
   padding-top: 20px;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .logo {
   font-size: 40px;
   width: 200px;
   text-align: center;
-  margin-left: 300px;
 }
 
 .topHeader {
@@ -17,7 +18,7 @@
   position: absolute;
   align-items: center;
   display: flex;
-  right: 15px;
+  right: 0;
   top: 0;
 }
 
@@ -29,15 +30,15 @@
 
 .topHeaderButton {
   width: 20px;
-  margin-right: 10px;
+  margin-left: 10px;
   cursor: pointer;
 }
 
 .navHeader {
   display: flex;
-  margin-top: 60px;
-  border-top: 3px solid #9ac7dc;
-  padding-top: 10px;
+  margin-top: 30px;
+  border-bottom: 3px solid #9ac7dc;
+  padding-bottom: 10px;
 }
 
 .navHeaderButton {
@@ -49,7 +50,5 @@
 
 .content {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  padding-top: 60px;
+  padding-top: 10px;
 }
