--- a/src/components/ChatMessage/Chat.module.scss
+++ b/src/components/ChatMessage/Chat.module.scss
@@ -1,8 +1,8 @@
 
 .message {
-  position: relative;
+  padding: 0.5rem;
+  overflow: hidden;
   display: flex;
-  margin-bottom: 25px;
 }
 
 .textWrapper {
@@ -14,6 +14,11 @@
 
 }
 
+.images {
+  max-width: 400px;
+
+}
+
 .info {
   position: absolute;
   display: flex;
@@ -22,8 +27,9 @@
 }
 
 .content {
+  min-width: 50px;
+
   flex-direction: column;
-  max-width: 250px;
   display: inline-flex;
   padding: 10px 15px;
   border-radius: 16px;
