--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,11 +1,25 @@
 .image {
 }
 
+.text {
+  font-size: 20px;
+}
+
+.promo {
+  font-size: 24px;
+}
+
+.more {
+  color: #96095E;
+  font-size: 24px;
+  margin-left: 10px;
+}
+
 .benefits {
   display: flex;
   justify-content: space-between;
-  background: #B8EBF3;
-  padding: 50px 60px;
+  background: #FEE6FC;
+  padding: 30px 60px;
   margin-top: 20px;
   border-radius: 142.5px;
 }
