--- a/src/pages/consult/Consult.module.scss
+++ b/src/pages/consult/Consult.module.scss
@@ -1,7 +1,36 @@
+.wrapper {
+  display: flex;
+  width: 100%;
+  background-color: #f5f5f5;
+  height: 70vh;
+}
+
+.consultType {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px 20px;
+  overflow-y: scroll;
+  width: 200px;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
 .consultation {
   margin-bottom: 16px;
   border: 1px solid black;
-  padding: 16px 8px;
+  padding: 8px 8px;
   cursor: pointer;
 }
 
