--- a/src/pages/catalog/Catalog.module.scss
+++ b/src/pages/catalog/Catalog.module.scss
@@ -1,31 +1,25 @@
 .wrapper {
   display: flex;
-}
-
-.types {
-  display: flex;
-  flex-direction: column;
-  width: 200px;
-  border-right: 1px solid black;
+  height: 100vh;
 }
 
 .typeSectionTitle {
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 15px;
   padding-bottom: 5px;
-  border-bottom: 1px solid black;
+}
+
+.types {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 200px;
 }
 
 .type {
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
   margin-bottom: 10px;
-}
-
-.product {
-  padding: 10px;
-  border: 1px solid black;
-  margin-right: 10px;
 }
 
 .productList {
