--- a/src/pages/consult/Consult.module.scss
+++ b/src/pages/consult/Consult.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
   display: flex;
   width: 100%;
-  background-color: #f5f5f5;
   height: 70vh;
+  justify-content: space-between;
 }
 
 .consultType {
@@ -11,6 +11,7 @@
 }
 
 .left {
+  background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -20,11 +21,12 @@
 }
 
 .right {
+  background-color: #f5f5f5;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
   height: 100%;
+  width: 80%;
 }
 
 .consultation {
