--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,29 @@
+*,
+:before,
+:after {
+    box-sizing: border-box;
+    -webkit-user-drag: none;
+    outline: none;
+}
+
+html {
+    touch-action: pan-x pan-y;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+}
+
+body {
+    margin: 0;
+    max-width: 100vw;
+    line-height: 1.4;
+    font-size: 14px;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol', 'Noto Color Emoji';
+    overscroll-behavior: none;
+}
+
 html, body {
     font-family: 'Alike', serif;
 }
