--- a/src/components/Auth/auth.module.scss
+++ b/src/components/Auth/auth.module.scss
@@ -1,11 +1,29 @@
+@import '../../styles/base';
+
 .wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
   width: 300px;
+  margin-top: 100px;
 }
 
 .input {
-  margin-bottom: 10px;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  border-radius: 8px;
+  box-sizing: border-box;
+  height: 50px;
+  overflow: hidden;
+  padding-left: 10px;
+  position: relative;
+  margin-bottom: 8px;
 }
 
 .changeAuthTypeButton {
