--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/base';
+
 .overlay {
   background: rgba(0, 0, 0, 0.4);
   width: 100%;
@@ -10,6 +12,7 @@
   display: flex;
   justify-content: center;
   padding-top: 100px;
+
 }
 
 .content {
@@ -19,20 +22,24 @@
 
 .input {
   width: 100%;
-  height: 30px;
-  border: 0;
+  padding: 10px;
   margin-bottom: 20px;
+  border: 0;
+  @include box;
 }
 
 .results {
   background: white;
-  padding: 10px;
+  padding: 16px;
   height: 500px;
   width: 600px;
+  @include box;
 }
 
 .result {
-
+  font-size: 17px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .cross {
