--- a/src/pages/consult/Consult.module.scss
+++ b/src/pages/consult/Consult.module.scss
@@ -1,8 +1,11 @@
+@import '../../styles/base';
+
 .wrapper {
   display: flex;
   width: 100%;
   height: 70vh;
-  justify-content: space-between;
+  padding: 20px;
+  @include box;
 }
 
 .consultType {
@@ -11,29 +14,27 @@
 }
 
 .left {
-  background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding: 10px 20px;
   overflow-y: scroll;
   width: 200px;
+  padding: 0 10px;
+  margin-right: 20px;
 }
 
 .right {
-  background-color: #f5f5f5;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
-  width: 80%;
+  width: 100%;
 }
 
 .consultation {
   margin-bottom: 16px;
-  border: 1px solid black;
   padding: 8px 8px;
   cursor: pointer;
+  @include box(rgba(0, 0, 0, 0.18) 0px 2px 4px);
 }
 
 .active {
