--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,8 @@ time, mark, audio, video {
     padding: 0;
     border: 0;
     vertical-align: baseline;
+    text-decoration: none;
+
 }
 
 html {
