--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -2,10 +2,16 @@
 
 .product {
   cursor: pointer;
-  flex: 0 1 calc(25% - 1em);
   height: 280px;
   margin: 0 5px 10px 5px;
+  flex-basis: calc(25% - 1em);
   @include box;
+  @media (max-width: 1024px) {
+    flex-basis: calc(33% - 1em);
+  }
+  @media (max-width: 768px) {
+    flex-basis: calc(50% - 1em);
+  }
 }
 
 .image {
@@ -18,14 +24,15 @@
 
 .info {
   padding: 15px 10px;
+  height: 40%;
   display: flex;
   flex-direction: column;
-  height: 40%;
+  justify-content: space-between;
 }
 
 .name {
   font-size: 18px;
-  flex: 1;
+  color: black;
 }
 
 .bottom {
