--- a/src/pages/catalog/Catalog.module.scss
+++ b/src/pages/catalog/Catalog.module.scss
@@ -13,6 +13,7 @@
 }
 
 .types {
+  min-height: 100vh;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -37,4 +38,5 @@
   flex-wrap: wrap;
   padding-left: 20px;
   align-content: flex-start;
+
 }
