--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -12,57 +12,38 @@
   @media (max-width: 768px) {
     flex-basis: calc(50% - 1em);
   }
-}
 
-.image {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  overflow: hidden;
-  border-radius: 8px 8px 0 0;
-}
+  &__image {
+    position: relative;
+    width: 100%;
+    height: 60%;
+    overflow: hidden;
+    border-radius: 8px 8px 0 0;
+  }
 
-.info {
-  padding: 15px 10px;
-  height: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+  &__info {
+    padding: 15px 10px;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-.name {
-  font-size: 18px;
-  color: black;
-}
+  &__name {
+    font-size: 18px;
+    color: black;
+  }
 
-.bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.rating {
-  position: relative;
-  width: 180px;
-  background: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: .3em;
-  padding: 5px;
-  overflow: hidden;
-  border-radius: 20px;
-  box-shadow: 0 0 2px #b3acac;
-  &__star {
-    font-size: 1.3em;
-    cursor: pointer;
-    color: #dabd18b2;
-    transition: filter linear .3s;
+  &__price {
+    font-size: 20px;
+    font-weight: 400;
+    color: $price;
   }
 }
 
-.price {
-  font-size: 20px;
-  font-weight: 400;
-  color: $price;
-}
