--- a/src/components/ProductComment/ProductComment.module.scss
+++ b/src/components/ProductComment/ProductComment.module.scss
@@ -1,26 +1,30 @@
 .comment {
   display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-}
+  justify-content: space-between;
+  &__content {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+  &__info {
+    display: flex;
+    align-items: center;
+  }
+  &__name {
+    font-size: 17px;
 
-.info {
-  display: flex;
-  align-items: center;
-}
-
-.name {
-  font-size: 17px;
-}
-
-.date {
+  }
+  &__date {
     color: #999;
     &::before {
       content: '•';
       margin: 0 5px;
     }
-}
+  }
+  &__text {
+    font-size: 14px;
+  }
+  &__rating {
 
-.text {
-  font-size: 15px;
+  }
 }
