--- a/src/pages/basket/Basket.module.scss
+++ b/src/pages/basket/Basket.module.scss
@@ -6,25 +6,39 @@
   @include box;
 }
 
-.fields {
-  padding: 0 18px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 16px;
-  li {
-    list-style: none;
-    font-size: 16px;
-    flex-basis: calc(25% - 1em);
-    &:first-child {
-      flex-basis: calc(50% - 1em);
+.basket {
+  &__fields {
+    padding: 0 18px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+    li {
+      list-style: none;
+      font-size: 16px;
+      flex-basis: calc(25% - 1em);
+      &:first-child {
+        flex-basis: calc(50% - 1em);
+      }
     }
+  }
+  &__products {
+    display: flex;
+    flex-direction: column;
+  }
+  &__button {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 8px;
+  }
+  &__empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 24px;
   }
 }
 
-.products {
-  display: flex;
-  flex-direction: column;
-}
 
 .item {
   padding: 18px;
@@ -42,32 +56,10 @@
       flex-basis: calc(50% - 1em);
     }
   }
-}
-
-.delete {
-  cursor: pointer;
-  color: red;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.button {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 8px;
-}
-
-.empty {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  &_image {
-    margin-bottom: 32px;
-  }
-  &_text {
-    text-align: center;
-    margin-bottom: 32px;
+  &__delete {
+    cursor: pointer;
+    color: red;
+    display: flex;
+    justify-content: flex-end;
   }
 }
-
