--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -4,27 +4,24 @@
   display: flex;
   flex-direction: column;
   position: relative;
-}
-
-.close {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  cursor: pointer;
-  font-size: 30px;
-  z-index: 100;
-}
-
-.content {
-  position: relative;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding-top: 45px;
-}
-
-.messages {
-  flex: 1;
-  overflow-y: scroll;
-  position: relative;
+  &__close {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    cursor: pointer;
+    font-size: 30px;
+    z-index: 100;
+  }
+  &__content {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 45px;
+  }
+  &__messages {
+    flex: 1;
+    overflow-y: scroll;
+    position: relative;
+  }
 }
