--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -5,44 +5,35 @@
   @media (max-width: 1280px) {
     padding: 0 20px;
   }
-}
 
-.logo {
-  font-size: 40px;
-  text-decoration: none;
+  &__content {
+    width: 100%;
+    padding: 30px 0;
+    flex: 1;
+  }
+
 }
 
 .topHeader {
   position: relative;
-}
+  &__logo {
+    font-size: 40px;
+    text-decoration: none;
+  }
 
-.topHeaderButtons {
-  position: absolute;
-  align-items: center;
-  display: flex;
-  right: 0;
-  top: 0;
-}
+  &__buttons {
+    position: absolute;
+    align-items: center;
+    display: flex;
+    right: 0;
+    top: 0;
+  }
 
-.badge {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  background-color: red;
-  width: 25px;
-  height: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ffffff;
-  border-radius: 100px;
-  z-index: 10;
-}
-
-.topHeaderButton {
-  display: block;
-  width: 28px;
-  cursor: pointer;
+  &__button {
+    display: block;
+    width: 28px;
+    cursor: pointer;
+  }
 }
 
 .navHeader {
@@ -50,22 +41,16 @@
   margin-top: 30px;
   border-bottom: 3px solid #9ac7dc;
   padding-bottom: 10px;
+  &__button {
+    text-transform: uppercase;
+    margin-right: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    color: black;
+  }
 }
 
-.navHeaderButton {
-  text-transform: uppercase;
-  margin-right: 10px;
-  font-size: 16px;
-  font-weight: 500;
-  text-decoration: none;
-  color: black;
-}
-
-.content {
-  width: 100%;
-  padding-top: 30px;
-  flex: 1;
-}
 
 .footer {
   display: flex;
@@ -96,4 +81,20 @@
 .footerTitleLink {
   font-size: 20px;
   margin-bottom: 32px;
+}
+
+.badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: red;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    border-radius: 100px;
+    z-index: 10;
+
 }
