--- a/src/pages/personal/Personal.module.scss
+++ b/src/pages/personal/Personal.module.scss
@@ -14,6 +14,13 @@
 
   }
 
+  &__logout {
+    color: red;
+    margin-top: 20px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
   &__orders {
     color: $price;
     font-size: 20px;
@@ -21,9 +28,3 @@
   }
 }
 
-.logout {
-  color: red;
-  margin-top: 20px;
-  font-size: 18px;
-  cursor: pointer;
-}
