--- a/src/pages/orders/Orders.module.scss
+++ b/src/pages/orders/Orders.module.scss
@@ -1,43 +1,57 @@
 @import '../../styles/base';
 
+
 .wrapper {
   padding: 20px;
   height: 70vh;
   @include box;
 }
 
-.table {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-    font-size: 14px;
-    text-align: left;
+.orders {
+  width: 100%;
+  height: 95%;
 
-  &__body {
-    width: 100%;
-    height: 100%;
-    overflow:scroll;
+  &__fields {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+    li {
+      list-style: none;
+      font-size: 16px;
+      flex-basis: calc(25% - 1em);
+      &:first-child {
+        flex-basis: calc(25% - 1em);
+      }
+      &:last-child {
+        flex-basis: 16px;
+      }
+    }
   }
 
-  &__row {
-    border-bottom: 1px solid #e0e0e0;
-
-
-    &_head {
-      font-weight: bold;
-    }
-
-    &:hover {
-      background-color: #f5f5f5;
-    }
+  &__list {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow: scroll;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.18);
   }
 }
 
-.table__column {
-    vertical-align: middle;
-    padding: 10px 0;
-    &:last-child {
-      display: flex;
-      justify-content: flex-end;
+.order {
+  font-size: 16px;
+  display: flex;
+  margin-bottom: 8px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.18);
+  justify-content: space-between;
+  div {
+    display: flex;
+    flex-basis: calc(25% - 1em);
+    &:first-child {
+      flex-basis: calc(25% - 1em);
     }
+  }
+  &:last-child {
+    border-bottom: 0;
+    margin-bottom: 0;
+  }
 }
